--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,2 +1,48 @@
-	#mdata 		{ width: 70%; 	float: left }
-	#mcontrol 	{ width: 30%; 	float: right}
+/*------------------------------------*\
+    $RESET
+\*------------------------------------*/
+body {
+  padding-top: 80px;
+}
+#DirectoryLayer {
+  width: 70%;
+  background-color: #cccccc;
+  clear: both;
+}
+#pathLayer {
+  clear: both;
+  background-color: #999999;
+}
+#iconLayer {
+  background-color: #666666;
+}
+#upLoadLayer {
+	background-color: #3366ff;
+	width: 30%; 	
+	float: right
+}
+
+.mainLayer{
+	width: 70%;
+}
+.listFileLayer{
+	overflow: scroll; 
+	width: 100%; 
+	height: 300px;
+}	
+
+/*------------------------------------*\
+    $Button element
+\*------------------------------------*/
+.imageButton{
+  float: left;
+  width: 74px;
+  background-size: 64px 64px;
+  background-repeat: no-repeat;
+  background-position: 50% 40%;
+  padding: 0px 5px 70px 5px;
+}
+
+.showDirectory{background-image: url('../img/folder.png');}
+.btgoHome	{background-image: url('../img/home.png');}
+.btchgStyle	{background-image: url('../img/list.png');  }
