--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -3,42 +3,19 @@
  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js"></script>
 <script type="text/javascript" src="/js/headListCDN.js"></script>  
    -->
-  
-
   <!-- default template -->
   <script id="default_readDirectory" type="text/x-dot-template">
 	{{~ it.farray :k}}
-	<div class='iconstyle m{{=k.type}} context-menu-one box menu-1 icon{{=k.extension}}' id='{{=k.filename}}'>
+	<div class='imageButton iconstyle js-click_{{=k.type}} icon{{=k.extension}}' id='{{=k.filename}}'>
 		<div class='icontext'>{{=k.basename}}</div>
 	</div>
 	{{~}}
   </script>
   
+  
   <script type="text/javascript" src="/lib/head.min.js"></script>
   <script type="text/javascript" src="/js/headList.js"></script>
-  
-  <style>
-body {
-  padding-top: 80px;
-}
-#DirectoryLayer {
-  width: 70%;
-  background-color: #cccccc;
-  float: left;
-}
-#pathLayer {
-  background-color: #999999;
-}
-#iconLayer {
-  background-color: #666666;
-}
-#upLoadLayer {
-	background-color: #3366ff;
-	width: 30%; 	
-	float: right
-}
-
-</style>
+  <style></style>
   
   <script language="javascript">
 head.js(cssList);			
@@ -54,17 +31,16 @@ head.ready(function() {
 }); //end header ready
 
   </script></head><body>
-<div id="mainLayer">
-	<img style="width: 64px; height: 64px;" alt="ShowFolder" src="../img/folder.png" id="ShowDirectory">
+<div class="mainLayer">
+	<div class="imageButton showDirectory js-click_ShowDirectory"></div>
 </div>
-
 <div id="DirectoryLayer">
 	<div id="iconLayer"> 
-		<img style="width: 64px; height: 64px;" alt="home" src="../img/home.png" id="goHome"> 
-		<img style="width: 64px; height: 64px;" alt="Change Style" src="../img/list.png" id="mStyle">
+		<div class="imageButton btgoHome  js-click_btgoHome"></div>
+		<div class="imageButton btchgStyle js-click_btchgStyle"></div>
 	</div>
 	<div id="pathLayer">racine</div>
-	<div id="listFileLayer" style="overflow: scroll; width: 100%; height: 300px;"></div>
+	<div id="listFileLayer" class="listFileLayer"></div>
 	
 </div>
 
