--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -28,7 +28,10 @@
 	<div id="iconLayer" class="iconLayer"> 
 		<div id="btgoHome" class="imageButton btgoHome  js-click_btgoHome"></div>
 		<div id="btchgStyle" class="imageButton btchgStyle js-click_btchgStyle"></div>
-		<div id="btshowUpLoad" class="imageButton btshowUpLoad js-click_btshowUpLoad"></div>		
+		<div id="btshowUpLoad" class="imageButton btshowUpLoad js-click_btshowUpLoad"></div>
+		
+		<div id="btaddFolder" class="imageButton btaddFolder js-click_btaddFolder"></div>			
+		<div id="btaddFile" class="imageButton btaddFile js-click_btaddFile"></div>	
 	</div>
 	<div id="pathLayer"  class="pathLayer">racine</div>
 	<div id="listFileLayer" class="listFileLayer"></div>
