--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -29,7 +29,6 @@
 	<div id="listFileLayer" class="listFileLayer context-menu-mainFolder"></div>
 </div>
 
-<div id="clickable">Click</div>
 <!-- ################ JAVASCRIPT CODE ############ -->
 <!--  
  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js"></script>
@@ -48,9 +47,8 @@ $(function(){
 		$("#upLoadLayer").hide();
 		$("#directoryLayer").hide();
 	// create repository if needed
-		var ID='<%= user._id %>';
-		createRepository(ID);
-		flushTrash(ID);
+		con_createRepository();
+		con_flushTrash();
 	$(".iconstyle").draggable({stop: dragstop});
 	$('.iconDirectory').droppable({drop: dropElement});//end droppable
 	
@@ -63,10 +61,6 @@ $(function(){
 		acceptedFiles: 'image/*,application/zip,.js'//liste des extensions acceptés
 	};
 	
-$(document).on('click','#clickable',function(objEvent){
-	console.log("lolo");
-	fileExist({file:'/public/FichierVide2.txt' });
-}); //end show directory
 	
 	
 	
